fix map moving on mobiles

--- a/client/sources/css/map/wraps.styl
+++ b/client/sources/css/map/wraps.styl
@@ -29,7 +29,7 @@
 
   @media screen and (max-width: 850px)
     width 100%
-    height 600px
+    height 80vh
 
 .locations-wrap
   width 25%
